--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3, node-worker-threads-pool
+    - uses: actions/checkout@v3, "node-worker-threads-pool"
     - run: npm i jsverify
     - run: node code.test.js
