--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,4 +7,5 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: npm i jsverify
+    - run: node-worker-threads-pool
     - run: node code.test.js
